--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,32 @@
 {
     "compilerOptions": {
-        // Enable latest features
-        "lib": [
-            "ESNext",
-            "DOM"
-        ],
+        // Base Options:
+        "esModuleInterop": true,
+        "skipLibCheck": true,
         "target": "ESNext",
-        "module": "ESNext",
-        "moduleDetection": "force",
-        "jsx": "react-jsx",
         "allowJs": true,
+        "resolveJsonModule": true,
+        "moduleDetection": "force",
+        "isolatedModules": true,
+        "verbatimModuleSyntax": true,
+        // Strictness
+        "strict": true,
+        "noUncheckedIndexedAccess": true,
+        "noImplicitOverride": true,
+        // If transpiling with TypeScript:
+        "module": "ESNext",
+        "outDir": "dist",
+        "sourceMap": true,
+        // AND if you're building for a library:
+        "declaration": true,
+        // Enable latest features
+        "lib": ["ESNext", "DOM"],
+        "jsx": "react-jsx",
         // Bundler mode
         "moduleResolution": "bundler",
         "allowImportingTsExtensions": true,
-        "verbatimModuleSyntax": true,
         "noEmit": true,
         // Best practices
-        "strict": true,
-        "skipLibCheck": true,
         "noFallthroughCasesInSwitch": true,
         // Some stricter flags (disabled by default)
         "noUnusedLocals": false,
